--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
         "@storybook/preset-create-react-app": "^3.1.5",
         "@storybook/react": "^6.1.18",
         "postcss-selector-parser": "^6.0.4",
+        "sass": "^1.32.7",
+        "sass-loader": "^8.0.2",
+        "style-loader": "^1.3.0",
         "typescript": "^4.1.3"
     },
     "scripts": {
