--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,5 +17,5 @@ steps:
 
 - script: |
     npm install
-    npm run build-storybook
-  displayName: 'npm install and run build-storybook'
+    npm run storybook
+  displayName: 'npm install and run storybook'
