--- a/package.json
+++ b/package.json
@@ -1,56 +1,57 @@
 {
-    "name": "athena",
-    "version": "1.0.0",
-    "private": true,
-    "dependencies": {
-        "@testing-library/jest-dom": "^5.11.4",
-        "@testing-library/react": "^11.1.0",
-        "@testing-library/user-event": "^12.1.10",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1",
-        "react-scripts": "4.0.1",
-        "web-vitals": "^0.2.4"
-    },
-    "devDependencies": {
-        "@babel/plugin-transform-react-jsx-self": "^7.12.13",
-        "@babel/plugin-transform-react-jsx-source": "^7.12.13",
-        "@babel/plugin-transform-runtime": "^7.12.15",
-        "@storybook/addon-actions": "^6.1.20",
-        "@storybook/addon-essentials": "^6.1.20",
-        "@storybook/addon-links": "^6.1.20",
-        "@storybook/node-logger": "^6.1.20",
-        "@storybook/preset-create-react-app": "^3.1.5",
-        "@storybook/react": "^6.1.20",
-        "postcss-selector-parser": "^6.0.4",
-        "sass": "^1.32.8",
-        "sass-loader": "^8.0.2",
-        "style-loader": "^1.3.0",
-        "typescript": "^4.1.3"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "storybook": "start-storybook -p 6006 -s public",
-        "build-storybook": "build-storybook -s public"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    }
+  "name": "athena",
+  "version": "1.0.0",
+  "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.8.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "web-vitals": "^1.1.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-react-jsx-self": "^7.12.13",
+    "@babel/plugin-transform-react-jsx-source": "^7.12.13",
+    "@babel/plugin-transform-runtime": "^7.13.8",
+    "@storybook/addon-actions": "^6.1.20",
+    "@storybook/addon-essentials": "^6.1.20",
+    "@storybook/addon-links": "^6.1.20",
+    "@storybook/node-logger": "^6.1.20",
+    "@storybook/preset-create-react-app": "^3.1.6",
+    "@storybook/react": "^6.1.20",
+    "babel-loader": "^8.2.2",
+    "postcss-selector-parser": "^6.0.4",
+    "react-scripts": "4.0.3",
+    "sass": "^1.32.8",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.3.0",
+    "typescript": "^4.2.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
