--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^13.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "styled-components": "^5.3.1",
     "web-vitals": "^2.1.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-react-jsx-self": "^7.14.9",
     "@babel/plugin-transform-react-jsx-source": "^7.14.5",
     "@babel/plugin-transform-runtime": "^7.15.0",
+    "@storybook/addon-a11y": "^6.3.7",
     "@storybook/addon-actions": "^6.3.7",
     "@storybook/addon-essentials": "^6.3.7",
     "@storybook/addon-links": "^6.3.7",
