--- a/package.json
+++ b/package.json
@@ -1,42 +1,48 @@
 {
-  "name": "athena",
-  "version": "1.0.0",
-  "private": true,
+  "name": "@kammersgaard/athena",
+  "version": "0.0.3",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.4.1",
+    "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.1",
-    "web-vitals": "^2.1.0"
+    "webpack": "^4.46.0"
   },
+  "main": "index.tsx",
   "devDependencies": {
     "@babel/plugin-transform-react-jsx-self": "^7.14.9",
     "@babel/plugin-transform-react-jsx-source": "^7.14.5",
     "@babel/plugin-transform-runtime": "^7.15.0",
-    "@storybook/addon-a11y": "^6.3.7",
-    "@storybook/addon-actions": "^6.3.7",
-    "@storybook/addon-essentials": "^6.3.7",
-    "@storybook/addon-links": "^6.3.7",
-    "@storybook/node-logger": "^6.3.7",
+    "@storybook/addon-a11y": "^6.3.12",
+    "@storybook/addon-actions": "^6.3.12",
+    "@storybook/addon-essentials": "^6.3.12",
+    "@storybook/addon-links": "^6.3.12",
+    "@storybook/node-logger": "^6.3.12",
     "@storybook/preset-create-react-app": "^3.2.0",
-    "@storybook/react": "^6.3.7",
+    "@storybook/react": "^6.3.12",
+    "@types/react": "^17.0.30",
+    "@types/react-dom": "^17.0.9",
     "babel-loader": "^8.2.2",
     "postcss-selector-parser": "^6.0.6",
     "react-scripts": "4.0.3",
-    "sass": "^1.38.1",
-    "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1",
-    "typescript": "^4.4.2"
+    "sass": "^1.43.2",
+    "sass-loader": "^12.2.0",
+    "style-loader": "^3.3.0",
+    "typescript": "^4.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build:react": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build": "npm run build:components && npm run build:icons",
+    "build-storybook": "build-storybook -s public",
+    "build:components": "tsc -p ./tsconfig.components.json",
+    "build:icons": "tsc -p ./tsconfig.icons.json"
   },
   "eslintConfig": {
     "extends": [
