--- a/package.json
+++ b/package.json
@@ -1,7 +1,20 @@
 {
   "name": "@kammersgaard/athena",
   "version": "0.0.3",
+  "main": "index.tsx",
+  "scripts": {
+    "start": "react-scripts start",
+    "build:react": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "storybook": "storybook dev --no-open -p 6006",
+    "build": "npm run build:components && npm run build:icons",
+    "build-storybook": "storybook build -s public",
+    "build:components": "tsc -p ./tsconfig.components.json",
+    "build:icons": "tsc -p ./tsconfig.icons.json"
+  },
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.4.1",
@@ -9,40 +22,32 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.1",
-    "webpack": "^4.46.0"
+    "webpack": "^5.91.0"
   },
-  "main": "index.tsx",
   "devDependencies": {
     "@babel/plugin-transform-react-jsx-self": "^7.14.9",
     "@babel/plugin-transform-react-jsx-source": "^7.14.5",
     "@babel/plugin-transform-runtime": "^7.15.0",
-    "@storybook/addon-a11y": "^6.5.9",
-    "@storybook/addon-actions": "^6.5.9",
-    "@storybook/addon-essentials": "^6.5.9",
-    "@storybook/addon-links": "^6.5.9",
-    "@storybook/node-logger": "^6.5.9",
-    "@storybook/preset-create-react-app": "^3.2.0",
-    "@storybook/react": "^6.5.9",
+    "@storybook/addon-a11y": "^8.1.5",
+    "@storybook/addon-actions": "^8.1.5",
+    "@storybook/addon-essentials": "^8.1.5",
+    "@storybook/addon-links": "^8.1.5",
+    "@storybook/addon-mdx-gfm": "^8.1.5",
+    "@storybook/node-logger": "^8.1.5",
+    "@storybook/preset-create-react-app": "^8.1.5",
+    "@storybook/react": "^8.1.5",
+    "@storybook/react-webpack5": "^8.1.5",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
+    "@types/styled-components": "5.1.34",
     "babel-loader": "^8.2.2",
     "postcss-selector-parser": "^6.0.6",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.1",
     "sass": "^1.43.2",
     "sass-loader": "^12.2.0",
+    "storybook": "^8.1.5",
     "style-loader": "^3.3.0",
     "typescript": "^4.4.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build:react": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build": "npm run build:components && npm run build:icons",
-    "build-storybook": "build-storybook -s public",
-    "build:components": "tsc -p ./tsconfig.components.json",
-    "build:icons": "tsc -p ./tsconfig.icons.json"
   },
   "eslintConfig": {
     "extends": [
