--- a/package.json
+++ b/package.json
@@ -18,24 +18,23 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.4.1",
-    "prettier": "^2.4.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "styled-components": "^5.3.1",
-    "webpack": "^5.91.0"
+    "webpack": "5.94.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-react-jsx-self": "^7.14.9",
     "@babel/plugin-transform-react-jsx-source": "^7.14.5",
     "@babel/plugin-transform-runtime": "^7.15.0",
-    "@storybook/addon-a11y": "^8.1.5",
-    "@storybook/addon-actions": "^8.1.5",
-    "@storybook/addon-essentials": "^8.1.5",
-    "@storybook/addon-links": "^8.1.5",
-    "@storybook/node-logger": "^8.1.5",
-    "@storybook/preset-create-react-app": "^8.1.5",
-    "@storybook/react": "^8.1.5",
-    "@storybook/react-webpack5": "^8.1.5",
+    "@storybook/addon-a11y": "^8.2.9",
+    "@storybook/addon-actions": "^8.2.9",
+    "@storybook/addon-essentials": "^8.2.9",
+    "@storybook/addon-links": "^8.2.9",
+    "@storybook/node-logger": "^8.2.9",
+    "@storybook/preset-create-react-app": "^8.2.9",
+    "@storybook/react": "^8.2.9",
+    "@storybook/react-webpack5": "^8.2.9",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
     "@types/styled-components": "5.1.34",
@@ -44,7 +43,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.43.2",
     "sass-loader": "^12.2.0",
-    "storybook": "^8.1.5",
+    "storybook": "^8.2.9",
     "style-loader": "^3.3.0",
     "typescript": "^4.4.4"
   },
